--- a/index.html
+++ b/index.html
@@ -7,16 +7,70 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
-      <!-- header  -->
-      <header><a href="./index.html"></a> webstudio</header>
+    <!-- header  -->
+    <header>
       <nav>
+        <a href="./index.html"> webstudio</a>
         <ul>
-          <li><a href=""></a> Studio</li>
-          <li><a href=""></a> Portfolio</li>
-          <li><a href=""></a> Contacts</li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-    </div>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
+    </header>
+
+    <!-- section 1 -->
+    <section>
+      <h1>
+        Effective Solutions <br />
+        for Your Business
+      </h1>
+      <button type="button">Order Service</button>
+    </section>
+    <!-- features -->
+    <section>
+      <h2 hidden>features</h2>
+      <ul>
+        <dl>
+          <dt>Strategy</dt>
+          <dl>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </dl>
+        </dl>
+        <dt>Punctuality</dt>
+        <dl>
+          Bring the key message to the brand's audience for the best price
+          within the shortest possible time.
+        </dl>
+        <dt>Diligence</dt>
+        <dl>
+          Research and confirm brands that present the strongest digital growth
+          opportunities and minimize risk.
+        </dl>
+        <dt>Technologies</dt>
+        <dl>
+          Design practice focused on digital experiences. We bring forth a deep
+          passion for problem-solving.
+        </dl>
+      </ul>
+    </section>
+    <!-- section 2 -->
+    <section>
+      <h1>What are we doing</h1>
+      <ul>
+        <img src="./images/about_us/foto_2.jpg.jpg" alt="Macboock" />
+        <img src="./images/about_us/foto.jpg.jpg" alt="Messenger" />
+        <img src="./images/about_us/foto_3.jpg.jpg" alt="Phone" />
+      </ul>
+    </section>
   </body>
 </html>
