--- a/index.html
+++ b/index.html
@@ -63,14 +63,78 @@
         </dl>
       </ul>
     </section>
-    <!-- section 2 -->
+    <!-- What are we doing -->
     <section>
-      <h1>What are we doing</h1>
+      <h2>What are we doing</h2>
       <ul>
-        <img src="./images/about_us/foto_2.jpg.jpg" alt="Macboock" />
-        <img src="./images/about_us/foto.jpg.jpg" alt="Messenger" />
-        <img src="./images/about_us/foto_3.jpg.jpg" alt="Phone" />
+        <img
+          src="./images/about_us/foto_2.jpg.jpg"
+          alt="Macboock"
+          width="360px"
+          height="x300px"
+        />
+        <img
+          src="./images/about_us/foto.jpg.jpg"
+          alt="Messenger"
+          width="360px"
+          height="300px"
+        />
+        <img
+          src="./images/about_us/foto_3.jpg.jpg"
+          alt="Phone"
+          width="360px"
+          height="300px"
+        />
       </ul>
     </section>
+    <!-- our team -->
+    <section>
+      <h2>Our team</h2>
+      <ul>
+        <img
+          src="./images/our_team/img_3.jpg"
+          alt="photo of the employee"
+          width="264px"
+          height="260px"
+        />
+        <h3>Mark Guerrero</h3>
+        <p>Product Designer</p>
+
+        <img
+          src="./images/our_team/img_2.jpg"
+          alt="photo of the employee"
+          width="264px"
+          height="260px"
+        />
+        <h3>Tom Ford</h3>
+        <p>Frontend Developer</p>
+
+        <img
+          src="./images/our_team/img_1.jpg"
+          alt="photo of the employee"
+          width="264px"
+          height="260px"
+        />
+
+        <h3>Camila Garcia</h3>
+        <p>Marketing</p>
+        <img
+          src="./images/our_team/img.jpg"
+          alt="photo of the employee"
+          width="264px"
+          height="260px"
+        />
+        <h3>Daniel Wilson</h3>
+        <p>UI Designer</p>
+      </ul>
+    </section>
+    <!-- footer -->
+    <footer>
+      <a href="./index.html"> webstudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
