--- a/index.html
+++ b/index.html
@@ -38,94 +38,114 @@
     <!-- features -->
     <section>
       <h2 hidden>features</h2>
-      <ul>
-        <dl>
-          <dt>Strategy</dt>
-          <dl>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </dl>
-        </dl>
+      <dl>
+        <dt>Strategy</dt>
+
+        <dd>
+          Our goal is to identify the business problem to walk away with the
+          perfect and creative solution.
+        </dd>
+
         <dt>Punctuality</dt>
-        <dl>
+
+        <dd>
           Bring the key message to the brand's audience for the best price
           within the shortest possible time.
-        </dl>
+        </dd>
+
         <dt>Diligence</dt>
-        <dl>
+
+        <dd>
           Research and confirm brands that present the strongest digital growth
           opportunities and minimize risk.
-        </dl>
+        </dd>
+
         <dt>Technologies</dt>
-        <dl>
+
+        <dd>
           Design practice focused on digital experiences. We bring forth a deep
           passion for problem-solving.
-        </dl>
-      </ul>
+        </dd>
+      </dl>
     </section>
     <!-- What are we doing -->
     <section>
       <h2>What are we doing</h2>
       <ul>
-        <img
-          src="./images/about_us/foto_2.jpg.jpg"
-          alt="Macboock"
-          width="360px"
-          height="x300px"
-        />
-        <img
-          src="./images/about_us/foto.jpg.jpg"
-          alt="Messenger"
-          width="360px"
-          height="300px"
-        />
-        <img
-          src="./images/about_us/foto_3.jpg.jpg"
-          alt="Phone"
-          width="360px"
-          height="300px"
-        />
+        <li>
+          <img
+            src="./images/about_us/foto_2.jpg.jpg"
+            alt="Macboock"
+            width="360"
+            height="300"
+          />
+        </li>
+        <li>
+          <img
+            src="./images/about_us/foto.jpg.jpg"
+            alt="Messenger"
+            width="360"
+            height="300"
+          />
+        </li>
+        <li>
+          <img
+            src="./images/about_us/foto_3.jpg.jpg"
+            alt="Phone"
+            width="360"
+            height="300"
+          />
+        </li>
       </ul>
     </section>
     <!-- our team -->
     <section>
       <h2>Our team</h2>
       <ul>
-        <img
-          src="./images/our_team/img_3.jpg"
-          alt="photo of the employee"
-          width="264px"
-          height="260px"
-        />
-        <h3>Mark Guerrero</h3>
-        <p>Product Designer</p>
+        <li>
+          <img
+            src="./images/our_team/img_3.jpg"
+            alt="photo of the employee"
+            width="264"
+            height="260"
+          />
 
-        <img
-          src="./images/our_team/img_2.jpg"
-          alt="photo of the employee"
-          width="264px"
-          height="260px"
-        />
-        <h3>Tom Ford</h3>
-        <p>Frontend Developer</p>
+          <h3>Mark Guerrero</h3>
+          <p>Product Designer</p>
+        </li>
 
-        <img
-          src="./images/our_team/img_1.jpg"
-          alt="photo of the employee"
-          width="264px"
-          height="260px"
-        />
+        <li>
+          <img
+            src="./images/our_team/img_2.jpg"
+            alt="photo of the employee"
+            width="264"
+            height="260"
+          />
+          <h3>Tom Ford</h3>
+          <p>Frontend Developer</p>
+        </li>
 
-        <h3>Camila Garcia</h3>
-        <p>Marketing</p>
-        <img
-          src="./images/our_team/img.jpg"
-          alt="photo of the employee"
-          width="264px"
-          height="260px"
-        />
-        <h3>Daniel Wilson</h3>
-        <p>UI Designer</p>
+        <li>
+          <img
+            src="./images/our_team/img_1.jpg"
+            alt="photo of the employee"
+            width="264"
+            height="260"
+          />
+          <h3>Camila Garcia</h3>
+          <p>Marketing</p>
+        </li>
+
+        <li>
+          <img
+            src="./images/our_team/img.jpg"
+            alt="photo of the employee"
+            width="264"
+            height="260"
+          />
+          <h3>Daniel Wilson</h3>
+          <p>UI Designer</p>
+        </li>
       </ul>
     </section>
     <!-- footer -->
