--- a/index.html
+++ b/index.html
@@ -26,128 +26,129 @@
         </ul>
       </address>
     </header>
+    <main>
+      <!-- section 1 -->
+      <section>
+        <h1>
+          Effective Solutions <br />
+          for Your Business
+        </h1>
+        <button type="button">Order Service</button>
+      </section>
+      <!-- features -->
+      <section>
+        <h2 hidden>features</h2>
+        <dl>
+          <dt>Strategy</dt>
 
-    <!-- section 1 -->
-    <section>
-      <h1>
-        Effective Solutions <br />
-        for Your Business
-      </h1>
-      <button type="button">Order Service</button>
-    </section>
-    <!-- features -->
-    <section>
-      <h2 hidden>features</h2>
-      <dl>
-        <dt>Strategy</dt>
+          <dd>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </dd>
 
-        <dd>
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
-        </dd>
+          <dt>Punctuality</dt>
 
-        <dt>Punctuality</dt>
+          <dd>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </dd>
 
-        <dd>
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-        </dd>
+          <dt>Diligence</dt>
 
-        <dt>Diligence</dt>
+          <dd>
+            Research and confirm brands that present the strongest digital
+            growth opportunities and minimize risk.
+          </dd>
 
-        <dd>
-          Research and confirm brands that present the strongest digital growth
-          opportunities and minimize risk.
-        </dd>
+          <dt>Technologies</dt>
 
-        <dt>Technologies</dt>
+          <dd>
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </dd>
+        </dl>
+      </section>
+      <!-- What are we doing -->
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/about_us/foto_2.jpg.jpg"
+              alt="Macboock"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/about_us/foto.jpg.jpg"
+              alt="Messenger"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/about_us/foto_3.jpg.jpg"
+              alt="Phone"
+              width="360"
+              height="300"
+            />
+          </li>
+        </ul>
+      </section>
+      <!-- our team -->
+      <section>
+        <h2>Our team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/our_team/img_3.jpg"
+              alt="photo of the employee"
+              width="264"
+              height="260"
+            />
 
-        <dd>
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
-        </dd>
-      </dl>
-    </section>
-    <!-- What are we doing -->
-    <section>
-      <h2>What are we doing</h2>
-      <ul>
-        <li>
-          <img
-            src="./images/about_us/foto_2.jpg.jpg"
-            alt="Macboock"
-            width="360"
-            height="300"
-          />
-        </li>
-        <li>
-          <img
-            src="./images/about_us/foto.jpg.jpg"
-            alt="Messenger"
-            width="360"
-            height="300"
-          />
-        </li>
-        <li>
-          <img
-            src="./images/about_us/foto_3.jpg.jpg"
-            alt="Phone"
-            width="360"
-            height="300"
-          />
-        </li>
-      </ul>
-    </section>
-    <!-- our team -->
-    <section>
-      <h2>Our team</h2>
-      <ul>
-        <li>
-          <img
-            src="./images/our_team/img_3.jpg"
-            alt="photo of the employee"
-            width="264"
-            height="260"
-          />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
 
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
-        </li>
+          <li>
+            <img
+              src="./images/our_team/img_2.jpg"
+              alt="photo of the employee"
+              width="264"
+              height="260"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
 
-        <li>
-          <img
-            src="./images/our_team/img_2.jpg"
-            alt="photo of the employee"
-            width="264"
-            height="260"
-          />
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
-        </li>
+          <li>
+            <img
+              src="./images/our_team/img_1.jpg"
+              alt="photo of the employee"
+              width="264"
+              height="260"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
 
-        <li>
-          <img
-            src="./images/our_team/img_1.jpg"
-            alt="photo of the employee"
-            width="264"
-            height="260"
-          />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
-        </li>
-
-        <li>
-          <img
-            src="./images/our_team/img.jpg"
-            alt="photo of the employee"
-            width="264"
-            height="260"
-          />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
-        </li>
-      </ul>
-    </section>
+          <li>
+            <img
+              src="./images/our_team/img.jpg"
+              alt="photo of the employee"
+              width="264"
+              height="260"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
     <!-- footer -->
     <footer>
       <a href="./index.html"> webstudio</a>
