--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- header  -->
     <header>
       <nav>
-        <a href="./index.html"> webstudio</a>
+        <a href="./index.html"> <p>webstudio</p></a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
