--- a/index.html
+++ b/index.html
@@ -29,44 +29,41 @@
     <main>
       <!-- section 1 -->
       <section>
-        <h1>
-          Effective Solutions <br />
-          for Your Business
-        </h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <!-- features -->
       <section>
         <h2 hidden>features</h2>
-        <dl>
-          <dt>Strategy</dt>
+        <ul>
+          <li><h3>Strategy</h3></li>
 
-          <dd>
+          <p></p>
             Our goal is to identify the business problem to walk away with the
             perfect and creative solution.
-          </dd>
+          </p>
 
-          <dt>Punctuality</dt>
+          <li><h3>unctuality</h3>P</li>
 
-          <dd>
+          <p>
             Bring the key message to the brand's audience for the best price
             within the shortest possible time.
-          </dd>
+          </p>
 
-          <dt>Diligence</dt>
+          <li><h3>Diligence</h3></li>
 
-          <dd>
+          <p>
             Research and confirm brands that present the strongest digital
             growth opportunities and minimize risk.
-          </dd>
+          </p>
 
-          <dt>Technologies</dt>
+          <li><h3>Technologies</h3></li>
 
-          <dd>
+          <p>
             Design practice focused on digital experiences. We bring forth a
             deep passion for problem-solving.
-          </dd>
-        </dl>
+          </p>
+        </ul>
       </section>
       <!-- What are we doing -->
       <section>
@@ -151,7 +148,7 @@
     </main>
     <!-- footer -->
     <footer>
-      <a href="./index.html"> webstudio</a>
+      <a href="./index.html"> <p>webstudio</p></a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
