--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <ul>
           <li><h3>Strategy</h3></li>
 
-          <p></p>
+          <p>
             Our goal is to identify the business problem to walk away with the
             perfect and creative solution.
           </p>
 
-          <li><h3>unctuality</h3>P</li>
+          <li><h3>unctuality</h3></li>
 
           <p>
             Bring the key message to the brand's audience for the best price
