--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- header  -->
     <header>
       <nav>
-        <a href="./index.html"> <p>webstudio</p></a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -45,7 +45,7 @@
             </p>
           </li>
           <li>
-            <h3>unctuality</h3>
+            <h3>Punctuality</h3>
 
             <p>
               Bring the key message to the brand's audience for the best price
@@ -102,7 +102,7 @@
       </section>
       <!-- our team -->
       <section>
-        <h2>Our team</h2>
+        <h2>Our Team</h2>
         <ul>
           <li>
             <img
@@ -153,7 +153,7 @@
     </main>
     <!-- footer -->
     <footer>
-      <a href="./index.html"> <p>webstudio</p></a>
+      <a href="./index.html">WebStudio</p></a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
