--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     </main>
     <!-- footer -->
     <footer>
-      <a href="./index.html">WebStudio</p></a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
